# mycelium-cdn-registry

./: .gitignore  CHANGELOG.md  README.md
.github/: release.yaml
crates/cdn-meta/: Cargo.toml
crates/cdn-meta/src/: lib.rs
crates/mycdnctl/: Cargo.toml
crates/mycdnctl/src/: config.rs  hero_redis.rs  holokvs.rs  main.rs  zdb.rs
crates/registry/: Cargo.toml  openapi.yaml
crates/registry/src/: blob.rs  lib.rs  main.rs  postgres.rs
crates/vxeddsa_support/: Cargo.toml
crates/vxeddsa_support/src/: lib.rs
docs/: README.md  metadata-technical-spec.md  mycdnctl-user-guide.md  registry-admin-guide.md  sample-config.toml
