[package]
name = "mycdnctl"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
blake3 = "1.8.2"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
redis = "0.32.2"
reed-solomon-erasure = { version = "6.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
toml = "0.8.23"
cdn-meta = { path = "../cdn-meta" }
rayon = "1.10.0"
infer = "0.19.0"
reqwest = { version = "0.12.20", default-features = false, features = [
  "blocking",
  "http2",
  "multipart",
  "rustls-tls",
  "rustls-tls-native-roots",
] }
faster-hex = "0.10.0"
mime_guess = "2.0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
