[package]
name = "mycdnctl"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
blake3 = "1.8.2"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
redis = "0.32.2"
reed-solomon-erasure = { version = "6.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", optional = true }
toml = "0.8.23"
cdn-meta = { path = "../cdn-meta" }
rayon = "1.10.0"
infer = "0.19.0"
faster-hex = "0.10.0"
mime_guess = "2.0.5"

# Holochain metadata storage (integrated HoloKVS client)
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
holochain_client = "0.8.0"
holo_hash = { version = "0.6", features = ["encoding"] }

# VXEdDSA signing (Signal spec) using only X25519 keys (from holopoc; treat as read-only upstream)
vxeddsa_support = { path = "../vxeddsa_support", default-features = false, features = ["sign"] }

[features]
default = ["hero_redis_ed25519"]
hero_redis_ed25519 = ["dep:ed25519-dalek"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
