[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
faster-hex = "0.10.0"
opentelemetry = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
tokio = { version = "1.45.1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"
