[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
deadpool-postgres = "0.14.1"
faster-hex = "0.10.0"
opentelemetry = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
